@@ -1,3 +1,7 @@
+2008-10-08  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* gtk-gui/gui.stetic: Add event and property for accessing errors.
+
 2008-10-07  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.XmlEditor.Completion/XmlCompletionData.cs:
